--- a/Frontend/src/app/calendar/calendar.component.html
+++ b/Frontend/src/app/calendar/calendar.component.html
@@ -1,2 +1,1 @@
-<!-- calendar.component.html -->
-<full-calendar defaultView="dayGridMonth" [events]="calendarEvents"></full-calendar>
+<full-calendar defaultView="dayGridMonth" [events]="calendarEvents" [options]="calendarOptions"></full-calendar>
