--- a/Frontend/src/app/event-form/event-form.component.html
+++ b/Frontend/src/app/event-form/event-form.component.html
@@ -1,33 +1,72 @@
-<form [formGroup]="eventForm" (ngSubmit)="onSubmit()">
-    <mat-form-field>
-        <input matInput placeholder="Event Name" formControlName="name">
-    </mat-form-field>
-    <mat-form-field>
-        <input matInput [matDatepicker]="startPicker" placeholder="Start Date" formControlName="startDate">
-        <mat-datepicker-toggle matSuffix [for]="startPicker"></mat-datepicker-toggle>
-        <mat-datepicker #startPicker></mat-datepicker>
-    </mat-form-field>
-    <mat-form-field>
-        <input matInput [matDatepicker]="endPicker" placeholder="End Date" formControlName="endDate">
-        <mat-datepicker-toggle matSuffix [for]="endPicker"></mat-datepicker-toggle>
-        <mat-datepicker #endPicker></mat-datepicker>
-    </mat-form-field>
-    <mat-form-field>
-        <input matInput placeholder="Location" formControlName="location">
-    </mat-form-field>
-    <mat-form-field>
-        <textarea matInput placeholder="Description" formControlName="description"></textarea>
-    </mat-form-field>
-    <mat-form-field>
-        <input matInput type="number" placeholder="Attendees" formControlName="attendees">
-    </mat-form-field>
-    <mat-form-field>
-        <mat-label>Category</mat-label>
-        <mat-select formControlName="category">
-            <mat-option *ngFor="let category of categories" [value]="category">
-                {{ category }}
-            </mat-option>
-        </mat-select>
-    </mat-form-field>
-    <button mat-raised-button color="primary" type="submit">Submit</button>
-</form>
+<div class="event-form-container">
+    <h2>{{ isEditMode ? 'Update' : 'Create' }} Event</h2>
+
+
+    <form [formGroup]="eventForm" (ngSubmit)="onSubmit()">
+
+        <div class="field-container">
+            <mat-form-field appearance="fill">
+                <mat-label>Event Name</mat-label>
+                <input matInput formControlName="name" required>
+                <mat-error *ngIf="f?.['name']?.invalid && (f?.['name']?.dirty || f?.['name']?.touched)">
+                    <div *ngIf="f?.['name']?.errors?.['required']">Event name is required</div>
+                </mat-error>
+            </mat-form-field>
+
+            <mat-form-field appearance="fill">
+                <mat-label>Start Date</mat-label>
+                <input matInput [matDatepicker]="startPicker" formControlName="startDate" required>
+                <mat-datepicker-toggle matSuffix [for]="startPicker"></mat-datepicker-toggle>
+                <mat-datepicker #startPicker></mat-datepicker>
+                <mat-error *ngIf="f?.['startDate']?.invalid && (f?.['startDate']?.dirty || f?.['startDate']?.touched)">
+                    <div *ngIf="f?.['startDate']?.errors?.['required']">Start date is required</div>
+                </mat-error>
+            </mat-form-field>
+
+            <mat-form-field appearance="fill">
+                <mat-label>End Date</mat-label>
+                <input matInput [matDatepicker]="endPicker" formControlName="endDate" required>
+                <mat-datepicker-toggle matSuffix [for]="endPicker"></mat-datepicker-toggle>
+                <mat-datepicker #endPicker></mat-datepicker>
+                <mat-error *ngIf="f?.['endDate']?.invalid && (f?.['endDate']?.dirty || f?.['endDate']?.touched)">
+                    <div *ngIf="f?.['endDate']?.errors?.['required']">End date is required</div>
+                </mat-error>
+            </mat-form-field>
+
+            <mat-form-field appearance="fill">
+                <mat-label>Location</mat-label>
+                <input matInput formControlName="location" required>
+                <mat-error *ngIf="f?.['location']?.invalid && (f?.['location']?.dirty || f?.['location']?.touched)">
+                    <div *ngIf="f?.['location']?.errors?.['required']">Location is required</div>
+                </mat-error>
+            </mat-form-field>
+
+            <mat-form-field appearance="fill">
+                <mat-label>Attendees</mat-label>
+                <input matInput type="number" formControlName="attendees" required>
+                <mat-error *ngIf="f?.['attendees']?.invalid && (f?.['attendees']?.dirty || f?.['attendees']?.touched)">
+                    <div *ngIf="f?.['attendees']?.errors?.['required']">Number of attendees is required</div>
+                </mat-error>
+            </mat-form-field>
+
+            <mat-form-field appearance="fill">
+                <mat-label>Category</mat-label>
+                <mat-select formControlName="categoryId">
+                    <mat-option *ngFor="let category of categories" [value]="category.id">{{category.name}}</mat-option>
+                </mat-select>
+            </mat-form-field>
+        </div>
+
+        <mat-form-field appearance="fill">
+            <mat-label>Description</mat-label>
+            <textarea matInput formControlName="description"></textarea>
+        </mat-form-field>
+        <div style="text-align: center;">
+            <div *ngIf="error" class="error-message">{{ error }}</div>
+            <button mat-raised-button color="primary" type="submit" [disabled]="loading">{{ isEditMode ? 'Update' :
+                'Create'
+                }} Event</button>
+            <mat-progress-spinner *ngIf="loading" mode="indeterminate"></mat-progress-spinner>
+        </div>
+    </form>
+</div>
