--- a/Frontend/src/app/login/login.component.scss
+++ b/Frontend/src/app/login/login.component.scss
@@ -18,7 +18,12 @@
 
   mat-form-field {
     width: 100%;
-    margin-bottom: 20px;
+
+    mat-error {
+      color: red;
+      position: fixed;
+      top: -18px;
+    }
   }
 
   button {
