--- a/Frontend/src/app/register/register.component.html
+++ b/Frontend/src/app/register/register.component.html
@@ -28,15 +28,20 @@
         </mat-form-field>
 
         <mat-form-field appearance="fill">
-            <mat-label>Role</mat-label>
-            <mat-select formControlName="role">
-                <mat-option value="User">User</mat-option>
-                <mat-option value="Admin">Admin</mat-option>
-            </mat-select>
+            <mat-label>Confirm Password</mat-label>
+            <input matInput type="password" formControlName="confirmPassword" required>
+            <mat-error
+                *ngIf="f?.['confirmPassword']?.invalid && (f?.['confirmPassword']?.dirty || f?.['confirmPassword']?.touched)">
+                <div *ngIf="f?.['confirmPassword']?.errors?.['required']">Confirm Password is required!</div>
+                <div *ngIf="f?.['confirmPassword']?.errors?.['minlength']">Confirm Password must be at least 6
+                    characters long!</div>
+                <div *ngIf="registerForm?.['errors']?.['passwordsMismatch'] && (f?.['confirmPassword']?.dirty || f?.['confirmPassword']?.touched)"
+                    style="top: 15px;">Passwords must match!</div>
+            </mat-error>
         </mat-form-field>
 
+        <div *ngIf="error" class="error-message">{{ error }}</div>
         <button mat-raised-button color="primary" type="submit" [disabled]="loading">Register</button>
         <mat-spinner *ngIf="loading" mode="indeterminate"></mat-spinner>
-        <div *ngIf="error" class="error-message">{{ error }}</div>
     </form>
 </div>
